--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 
 body {
   font-family: Poppins, sans-serif;
+  width: 400px;
+}
+
+.banner {
+  position: absolute;
 }
 
 .flex-container {
@@ -9,14 +14,17 @@ body {
   flex-direction: column;
   margin: 0 0;
   padding: 10px;
-  align-content: space-between;
+  width: 100%;
+  height: 100vh;
 }
 
 .navbar ul {
-  width: 365px;
+  width: 375px;
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 10px;
+  display: flex;
+  align-content: space-between;
 }
 
 .nav-logo {
@@ -25,17 +33,20 @@ body {
   height: 20px;
   left: 10px;
   top: 12px;
-  flex: 3;
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 20px;
   color: #6070ff;
   display: flex;
-  align-items: center;
-  text-align: center;
+  text-align: left;
   order: 0;
   flex-grow: 0;
+  flex: 3;
+}
+
+.nav-logo a {
+  text-decoration: none;
 }
 
 .greet-section {
@@ -53,12 +64,16 @@ body {
   line-height: 52px;
 }
 
+.greet-section h1 {
+    padding-top: 80px;
+}
+
 .info-section {
   color: #344563;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 22px;
 }
 
 .connect {
@@ -68,24 +83,15 @@ body {
   line-height: 24px;
 }
 
-.ellipse-11 {
-  position: absolute;
-  width: 25px;
-  left: 1px;
-  top: 110px;
+.social ul{
+    width: 375px;
+    list-style: none;
+    margin: 0;
+    padding: 0px;
+    display: flex;
+    align-content: space-between;
 }
 
-.rectangle-4 {
-  position: sticky;
-  width: 95.58px;
-  height: 40px;
-  left: 294px;
-  top: 168px;
-}
-
-.ellipse-3 {
-  position: sticky;
-  width: 40px;
-  left: 360px;
-  top: 168px;
+.social ul li {
+    padding: 0px 20px 0px 0px;
 }
