--- a/style.css
+++ b/style.css
@@ -5,10 +5,6 @@ body {
   width: 400px;
 }
 
-.banner {
-  position: absolute;
-}
-
 .flex-container {
   display: flex;
   flex-direction: column;
@@ -16,6 +12,9 @@ body {
   padding: 10px;
   width: 100%;
   height: 100vh;
+  background-image: url(images/background.svg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 
 .navbar ul {
@@ -80,6 +79,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+  color: #7f8cff;
 }
 
 .social ul {
@@ -93,4 +93,5 @@ body {
 
 .social ul li {
   padding: 0 20px 0 0;
+  width: 20px;
 }
