--- a/style.css
+++ b/style.css
@@ -112,7 +112,16 @@ a {
 
 /* Project Pages */
 
-.works-warapper ul{
+.works-wrapper ul{
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 20% 20% 20% 20%;
+  grid-template-areas: "main" "main" "main" "main";
+  grid-row-gap: 125px;
+  background-color: #e5e5e5;
+  justify-items: center;
+}
+.works-warapper ul li{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -136,7 +145,7 @@ a {
   border: 1px solid #dfe1e6;
   box-sizing: border-box;
   border-radius: 16px;
-  margin-bottom: 100px;
+  
 }
 
 .project-1 img {
@@ -250,7 +259,7 @@ ul .small-button-wrapper {
   box-sizing: border-box;
   border-radius: 8px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 17px;
   line-height: 24px;
   display: flex;
@@ -288,7 +297,7 @@ ul .small-button-wrapper {
   position: relative;
   width: 200px;
   height: 101px;
-  padding-top: 250px;
+  padding-top: 100px;
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
@@ -316,8 +325,6 @@ ul .small-button-wrapper {
   line-height: 24px;
   display: flex;
   color: #000;
-  justify-content: space-between;
-  align-items: center;
 }
 .cat-wrapper li p{
   display: flex;
@@ -351,7 +358,7 @@ ul .small-button-wrapper {
   color: #253858;
 }
 
-ul.seperator {
+.seperator {
   content: "";
   border-bottom: 1px solid #ccc;
   padding-top: 0.5rem;
