--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a {
   padding: 0;
   display: flex;
   align-content: space-between;
-  flex-wrap: wrap;
+  position: relative;
 }
 
 .social h6 a {
@@ -188,7 +188,7 @@ a {
   line-height: 16px;
 }
 
-.back-end {
+ul .back-end {
   font-size: 13px;
   font-style: normal;
   font-weight: 600;
@@ -236,14 +236,12 @@ ul .small-button-wrapper {
 
 .small-button {
   width: auto;
-  height: 24px;
-  left: 12px;
-  top: 12px;
+  height: auto;
   border: none;
   background: #ebebff;
   border-radius: 8px;
   color: #6070ff;
-  padding: 0 10px;
+  padding: 4px 10px;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
