--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-* {
+*,
+*::before
+*::after {
+  margin: 0;
+  padding: 0;
   padding-inline-start: 0;
 }
 
@@ -15,7 +19,6 @@ body {
 .flex-container {
   display: flex;
   flex-direction: column;
-  margin: 0 0;
   padding: 10px;
   width: 100%;
   height: 100vh;
@@ -30,8 +33,6 @@ ul {
 }
 
 .navbar ul {
-  width: 375px;
-  list-style: none;
   margin: 0;
   padding: 10px;
   display: flex;
@@ -67,14 +68,16 @@ a:visited {
 
 .greet-section {
   display: flex;
-  flex-direction: column;
-  position: static;
+  flex-direction: column;  
+  align-items: flex-start;
+  justify-content: center;
   width: 100%;
   color: #172b4d;
   flex: none;
   order: 0;
   flex-grow: 0;
   margin: 12px;
+  margin-top: 45px;
   align-self: center;
   font-style: normal;
   font-weight: bold;
@@ -453,7 +456,7 @@ ul .small-button-wrapper {
 
 @media (min-width: 992px) {
 body {
-  width: 100%;
+  width: auto;
 }
 
 .navbar ul {
@@ -467,7 +470,14 @@ body {
 }
 
 header {
-  margin: 0 100px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 45px;
+  z-index: 2;
+  padding: 0 100px;
+  background: #fff;
 }
 
 .navbar ul li img {
@@ -498,7 +508,6 @@ header {
 }
 
 .greet-section h1 {
-  margin: 200px 0 0 0;
   padding: 0 0 0 0;
   width: 900px;
   font-size: 48;
