Add the CSS class and the HTML test for the pop up menu.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
   flex-direction: column;
   overflow-x: hidden;
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 .flex-container {
@@ -30,10 +32,10 @@ ul {
 }
 
 .navbar ul {
-  width: 375px;
+  width: 100%;
   list-style: none;
   margin: 0;
-  padding: 10px;
+  padding: 0px;
   display: flex;
   align-content: space-between;
 }
@@ -63,6 +65,22 @@ a:visited {
 
 .menu-options {
   display: none;
+}
+
+.pop-menu {
+  background: #6070FF;
+  display: flex;
+  height: 700px;
+  mix-blend-mode: multiply;
+  width: 100%;
+  z-index: 1;
+}
+
+.pop-menu li {
+  color: white;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 44px;
 }
 
 .greet-section {
