Add the display none for the pop up menu class to the css. Prevents showing in desktop version.

--- a/style.css
+++ b/style.css
@@ -504,6 +504,10 @@ ul .small-button-wrapper {
     transition: all 0.2s ease-in;
   }
 
+  .pop-menu {
+    display: none;
+  }
+
   .greet-section {
     background: #fff url(images/desktopbg.svg);
     background-repeat: no-repeat;
