--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ a:visited {
 
 .pop-menu {
   background: #6070FF;
-  display: flex;
+  display: none;
   height: 700px;
   mix-blend-mode: multiply;
   width: 100%;
