--- a/style.css
+++ b/style.css
@@ -68,10 +68,14 @@ a:visited {
 }
 
 .pop-menu {
-  background: #6070FF;
+  background: rgba(96, 112, 255, 1);
+  backdrop-filter: blur(15px);
   display: none;
-  height: 700px;
+  height: 600px;
   mix-blend-mode: multiply;
+  padding-left: 20px;
+  padding-top: 70px;
+  position: absolute;
   width: 100%;
   z-index: 1;
 }
@@ -79,8 +83,8 @@ a:visited {
 .pop-menu li {
   color: white;
   font-weight: 600;
-  font-size: 32px;
-  line-height: 44px;
+  font-size: 46px;
+  line-height: 110px;
 }
 
 .greet-section {
