--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ ul {
   width: 100%;
   list-style: none;
   margin: 0;
-  padding: 0px;
+  padding: 0;
   display: flex;
   align-content: space-between;
 }
