--- a/style.css
+++ b/style.css
@@ -6,22 +6,22 @@
 
 body {
   font-family: Poppins, sans-serif;
-  width: auto;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  width: 100%;
 }
 
 .flex-container {
   display: flex;
   flex-direction: column;
   margin: 0 0;
-  padding: 10px;
+  padding: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-image: url(images/background.svg);
   background-repeat: no-repeat;
   background-size: 100% 100%;
@@ -73,7 +73,6 @@ a:visited {
   display: none;
   height: 600px;
   mix-blend-mode: multiply;
-  padding-left: 20px;
   padding-top: 70px;
   position: absolute;
   width: 100%;
@@ -85,6 +84,7 @@ a:visited {
   font-weight: 600;
   font-size: 46px;
   line-height: 110px;
+  padding-left: 20px;
 }
 
 .greet-section {
