--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 * {
   padding-inline-start: 0;
@@ -15,18 +15,34 @@
   z-index: 0;
 }*/
 
-.popup-window {
+.popup-bg {
   position: fixed;
   top: 0;
   left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 24px 12px;
+  background-color: rgba(116, 116, 116, 0.6);
+  backdrop-filter: blur(5px);
+  z-index: 1;
+  overflow: scroll;
+  pointer-events: all;
+  display: none;
+}
+
+.popup-window {
   border: 1px solid #dfe1e6;
   border-radius: 16px;
-  margin: 0 10px;
   padding: 0 10px;
-  z-index: 1;
   background-color: #fff;
-  display: block;
+  z-index: 1;
+  display: none;
+
 }
+
 .popup-header {
   align-items: center;
   display: flex;
@@ -48,8 +64,8 @@
 }
 
 .feature-image {
-  display: flex;
   width: 100%;
+  height: auto;
 }
 
 .popup-window .popup-description {
@@ -557,11 +573,14 @@ ul .small-button-wrapper {
 }
 
 @media screen and (min-width: 993px) {
-.popup-window {
-  left: 10%;
-  top: 8%;
-  width: 80%;
-}
+  .popup-bg {
+    z-index: 3;
+  }
+  .popup-window {
+    left: 10%;
+    top: 8%;
+    width: 80%;
+  }
 
   .dsk-container {
     display: flex;
@@ -614,9 +633,9 @@ ul .small-button-wrapper {
     transition: all 0.2s ease-in;
   }
 
-  .pop-menu {
+  /* .pop-menu {
     display: none;
-  }
+  } */
 
   .greet-section {
     background: #fff url(images/desktopbg.svg);
@@ -808,3 +827,5 @@ ul .small-button-wrapper {
     border-radius: 0;
   }
 }
+
+
