--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  padding: 24px 12px;
+  padding: 24px 0;
   background-color: rgba(116, 116, 116, 0.6);
   backdrop-filter: blur(5px);
   z-index: 1;
