--- a/style.css
+++ b/style.css
@@ -150,6 +150,10 @@ body {
   width: 100%;
 }
 
+.overflow-hidden {
+  overflow-y: hidden;
+}
+
 .flex-container {
   display: flex;
   flex-direction: column;
@@ -382,6 +386,202 @@ a:visited {
   color: #6070ff;
 }
 
+/* MODALS */
+
+.modal {
+  box-sizing: border-box;
+  z-index: 3;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 100px 12px;
+  opacity: 0%;
+  visibility: hidden;
+  overflow-y: scroll;
+}
+
+.modal--active {
+  opacity: 100%;
+  visibility: visible;
+}
+
+.modal__window {
+  position: relative;
+  top: -50px;
+  background: #fff;
+  padding: 24px 5%;
+  width: 90%;
+  min-height: 90%;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  transition: top 0.4s ease-out;
+}
+
+.modal__window--transition {
+  top: 0;
+}
+
+.modal__header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal__title {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  color: #172b4d;
+  margin-bottom: 0px;
+}
+
+.modal__icon-close {
+  cursor: pointer;
+  font-size: 18px;
+  padding-right: 12px;
+  color: #67798e;
+}
+
+.modal__icon-close:hover {
+  color: #253858;
+}
+
+.modal__icon-close:active {
+  color: #2230d2;
+}
+
+.modal__list {
+  display: flex;
+  align-items: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.modal__list h3 {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #344563;
+  text-transform: uppercase;
+}
+
+.modal__list h4 {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #7a869a;
+}
+
+.modal__list li {
+  margin-right: 8px;
+}
+
+.modal__list ul:last-child {
+  margin-right: 0;
+}
+
+.modal__img {
+  width: 100%;
+  height: auto;
+  max-width: 600px;
+  border-radius: 8px;
+  margin-bottom: 12px;
+}
+
+.modal__info {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal__desc {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #344563;
+  margin-bottom: 12px;
+}
+
+.modal__tech {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.modal__tag {
+  display: block;
+  background: #f5f5ff;
+  padding: 4px 12px;
+  margin-right: 8px;
+  border-radius: 8px;
+  color: #6070ff;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  margin-bottom: 10px;
+}
+
+.modal__line {
+  width: 90%;
+  border-bottom: 1px solid #ebecf0;
+  margin-bottom: 12px;
+}
+
+.modal__buttons-container {
+  display: flex;
+}
+
+.modal__button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  color: #6070ff;
+  background: #fff;
+  font-size: 17px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid #7f8cff;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  transition: color 0.2s ease, background-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+.modal__button:visited {
+  color: #6070ff;
+}
+
+.modal__button:active {
+  border: none;
+  background: #2230d2;
+  color: #fff;
+}
+
+.modal__button:hover {
+  border: none;
+  background: #6070ff;
+  color: #fff;
+  box-shadow: 0 8px 16px #4053fc3d;
+}
+
+.modal__button--see-live {
+  margin-right: 12px;
+}
+
+.modal__icon-button {
+  margin-left: 6px;
+}
+
+
 .works-wrapper ul {
   display: grid;
   grid-template-columns: auto;
@@ -562,7 +762,7 @@ ul .small-button-wrapper {
   position: relative;
   width: auto;
   height: 100vh;
-  border-bottom-left-radius: 6rem;
+  border-bottom-left-radius: 60rem;
 }
 
 .about-me h2 {
@@ -707,6 +907,34 @@ ul .small-button-wrapper {
   .project__img {
     margin-right: 30px;
     max-height: 60vh;
+  }
+
+  .modal__window {
+    width: 50%;
+  }
+
+  .modal__title {
+    font-size: 40px;
+    margin-bottom: 0;
+  }
+
+  .modal__img {
+    margin: 0 auto;
+  }
+
+  .modal__info {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .modal__desc {
+    font-size: 16px;
+    flex: 1 0 65%;
+    margin-right: 30px;
+  }
+
+  .modal__tags-buttons-container {
+    flex: 1 0 40%;
   }
 
   .dsk-container {
