--- a/style.css
+++ b/style.css
@@ -1,114 +1,50 @@
- @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+ 
 * {
   padding-inline-start: 0;
 }
 
-/*.overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: rgba(170, 174, 235, 0.6);
-  backdrop-filter: blur(5px);
-  z-index: 0;
-}*/
-
-.popup-bg {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  padding: 24px 0;
-  background-color: rgba(116, 116, 116, 0.6);
-  backdrop-filter: blur(5px);
-  z-index: 1;
-  overflow: scroll;
-  pointer-events: all;
-  display: none;
-}
-
-.popup-window {
-  border: 1px solid #dfe1e6;
-  border-radius: 16px;
-  padding: 0 10px;
-  background-color: #fff;
-  z-index: 1;
-  display: none;
-
-}
-
-.popup-header {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-}
-
-.popup-header .project-name {
-  font-size: 32px;
-  font-weight: bold;
-  color: #172b4d;
-}
-
-.close-btn {
-  background: #fff;
-  border: 2px;
-  color: #172b4d;
-  font-size: 30px;
+button {
   cursor: pointer;
-}
-
-.feature-image {
-  width: 100%;
-  height: auto;
-}
-
-.popup-window .popup-description {
-  background: #fff;
   display: flex;
-  color: #344563;
-  font-weight: 600;
-  font-size: 13px;
-}
-
-.d-item {
-  padding: 0 10px;
-}
-
-.d-item1 {
-  color: #7a869a;
-}
-
-.popup-window .popup-body {
-  color: #344563;
-}
-
-.popup-window .popup-lang {
-  display: flex;
-  background: #fff;
-}
-
-.popup-window .lb {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 5px;
-}
-
-.btn-icon {
+  align-items: center;
   color: #6070ff;
-  margin: 0 5px 0 10px;
+  background: #fff;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid #7f8cff;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+button:hover {
+  border: none;
+  background: #6070ff;
+  color: #fff;
+  box-shadow: 0 8px 16px #4053fc3d;
+}
+
+button:active {
+  border: none;
+  background: #2230d2;
+  color: #fff;
+}
+
+button:disabled {
+  border: 1px solid #c1c7d0;
+  color: #5e6c84;
 }
 
 body {
   font-family: Poppins, sans-serif;
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  overflow-x: scroll;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -271,6 +207,280 @@ a:visited {
 }
 
 /* Project Pages */
+
+.project {
+  background-color: #e5e5e5;
+  padding: 114px 24px;
+}
+
+.project__card {
+  background: #fff;
+  padding: 12px;
+  border-radius: 12px;
+}
+
+.project__img {
+  width: 100%;
+  height: auto;
+}
+
+.project__title {
+   font-size: 32px;
+   line-height: 36px;
+   color: #172b4d;
+   font-weight: 700;
+   margin: 12px 0;
+}
+
+.project__quali {
+  display: flex;
+  align-items: center;
+}
+
+.project__quali li {
+  font-size: 13px;
+  font-weight: 600;
+  color: #7a869a;
+  line-height: 16px;
+  margin-right: 8px;
+}
+
+.project__quali li:first-child {
+  font-size: 13px;
+  font-weight: 600;
+  color: #344563;
+  text-transform: uppercase;
+}
+
+.project__circle {
+  height: 6px;
+  width: 6px;
+  background: #7a7a7a;
+  border-radius: 50%;
+}
+
+.project__desc {
+  font-size: 15px;
+  color: #344563;
+  line-height: 24px;
+  margin-bottom: 12px;
+}
+
+.project__tech {
+  display: flex;
+  align-items: center;
+}
+
+.project__tag {
+  padding: 4px 12px;
+  border-radius: 8px;
+  background: #ebebff;
+  margin-right: 8px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  color: #6070ff;
+}
+
+/* MODALS */
+
+.modal {
+  box-sizing: border-box;
+  z-index: 3;
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 100px 12px;
+  opacity: 0%;
+  visibility: hidden;
+  overflow-y: scroll;
+}
+
+.modal--active {
+  opacity: 100%;
+  visibility: visible;
+}
+
+.modal__window {
+  position: relative;
+  top: -50px;
+  background: #fff;
+  padding: 24px 5%;
+  width: 90%;
+  min-height: 90%;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  transition: top 0.4s ease-out;
+}
+
+.modal__window--transition {
+  top: 0;
+}
+
+.modal__header {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.modal__title {
+  font-weight: 700;
+  font-size: 32px;
+  color: #172b4d;
+  margin-bottom: 10px;
+
+}
+
+.modal__icon-close {
+  cursor: pointer;
+  font-size: 40px;
+  padding-right: 12px;
+  color: #67798e;
+  padding-bottom: 0;
+  border: none;
+}
+
+.modal__icon-close:hover {
+  color: #253858;
+}
+
+.modal__icon-close:active {
+  color: #2230d2;
+}
+
+.modal__list {
+  display: flex;
+  align-items: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.modal__list h3 {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #344563;
+  text-transform: uppercase;
+}
+
+.modal__list h4 {
+  font-weight: 600;
+  font-size: 13px;
+  line-height: 16px;
+  color: #7a869a;
+}
+
+.modal__list li {
+  margin-right: 8px;
+}
+
+.modal__list ul:last-child {
+  margin-right: 0;
+}
+
+.modal__img {
+  width: 100%;
+  height: auto;
+  max-width: 600px;
+  border-radius: 8px;
+  margin-bottom: 12px;
+}
+
+.modal__info {
+  display: flex;
+  flex-direction: column;
+}
+
+.modal__desc {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  color: #344563;
+  margin-bottom: 12px;
+}
+
+.modal__tech {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.modal__tag {
+  display: block;
+  background: #f5f5ff;
+  padding: 4px 12px;
+  margin-right: 8px;
+  border-radius: 8px;
+  color: #6070ff;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  margin-bottom: 10px;
+}
+
+.modal__line {
+  width: 90%;
+  border-bottom: 1px solid #ebecf0;
+  margin-bottom: 12px;
+}
+
+.modal__buttons-container {
+  display: flex;
+}
+
+.modal__button {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  color: #6070ff;
+  background: #fff;
+  font-size: 17px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  font-weight: 500;
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid #7f8cff;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  transition: color 0.2s ease, background-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+.modal__button:visited {
+  color: #6070ff;
+}
+
+.modal__button:active {
+  border: none;
+  background: #2230d2;
+  color: #fff;
+}
+
+.modal__button:hover {
+  border: none;
+  background: #6070ff;
+  color: #fff;
+  box-shadow: 0 8px 16px #4053fc3d;
+}
+
+.modal__button--see-live {
+  margin-right: 12px;
+}
+
+.modal__icon-button {
+  margin-left: 6px;
+}
+
 
 .works-wrapper ul {
   display: grid;
@@ -452,7 +662,7 @@ ul .small-button-wrapper {
   position: relative;
   width: auto;
   height: 100vh;
-  border-bottom-left-radius: 6rem;
+  border-bottom-left-radius: 60rem;
 }
 
 .about-me h2 {
@@ -581,6 +791,50 @@ ul .small-button-wrapper {
     left: 10%;
     top: 8%;
     width: 80%;
+  }
+
+  .project__card {
+    width: 65%;
+    margin: 0 auto;
+    display: flex;
+    padding: 24px;
+  }
+
+  .project__card--reverse {
+    flex-direction: row-reverse;
+  }
+
+  .project__img {
+    margin-right: 30px;
+    max-height: 60vh;
+  }
+
+  .modal__window {
+    width: 50%;
+  }
+
+  .modal__title {
+    font-size: 40px;
+    margin-bottom: 0;
+  }
+
+  .modal__img {
+    margin: 0 auto;
+  }
+
+  .modal__info {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .modal__desc {
+    font-size: 16px;
+    flex: 1 0 65%;
+    margin-right: 30px;
+  }
+
+  .modal__tags-buttons-container {
+    flex: 1 0 40%;
   }
 
   .dsk-container {
@@ -828,5 +1082,3 @@ ul .small-button-wrapper {
     border-radius: 0;
   }
 }
-
-
