--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ ul {
   width: 100%;
   list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 10px 0;
   display: flex;
   align-content: space-between;
 }
@@ -198,7 +198,7 @@ a:visited {
 
 .project {
   background-color: #e5e5e5;
-  padding: 114px 24px;
+  padding: 50px 24px;
 }
 
 .project__card {
@@ -809,6 +809,7 @@ ul .small-button-wrapper {
   .project__img {
     margin-right: 30px;
     max-height: 60vh;
+    max-width: 400px;
   }
 
   .modal__window {
@@ -897,7 +898,7 @@ ul .small-button-wrapper {
   .greet-section {
     background: #fff url(images/desktopbg.svg);
     background-repeat: no-repeat;
-    height: auto;
+    height: 100vh;
     border-bottom-left-radius: 6rem;
   }
 
